user search filtering, profile search filtering
